FireAndForget: lighter client operations not expecting for response